@@ -1,4 +1,8 @@
-apply plugin: 'java'
+plugins{
+    id 'org.springframework.boot' version '2.4.0'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'java'
+}
 
 repositories{
     mavenCentral()
@@ -6,44 +10,33 @@ repositories{
     maven { url 'https://www.jitpack.io' }
 }
 
-ext{ /* Как вариант можно создать карту и туда класть */
-    arcVersion        = 'v115'
-    jobaVersion       = 'v2.10.8'
-    lombokVersion     = '1.18.12'
-    discord4jVersion  = '3.1.1'
+ext{
+    discord4j_version  = '3.1.3'
+    arc_version        = 'v115'
+    joda_version       = 'v2.10.8'
+    caffeine_version   = '2.8.8'
 
-    jaxbVersion       = '2.2.11'
-    hibernateVersion  = '5.4.22.Final'
-    postgresqlVersion = '9.0-801.jdbc4'
+    jaxb_version       = '2.3.1'
+    hibernate_version  = '5.4.24.Final'
+    postgresql_version = '42.2.5'
 }
 
-sourceSets.main.java.srcDirs = ["src/main/java/"]
-sourceSets.main.resources.srcDirs = ["src/main/resources"]
-project.ext.mainClassName = "insidebot.InsideBot"
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
+    options.compilerArgs += ["--enable-preview"]
+}
 
 dependencies{
-    implementation "com.discord4j:discord4j-core:$discord4jVersion"
-    implementation "com.github.Anuken.Arc:arc-core:$arcVersion"
-    implementation "org.reflections:reflections:0.9.12"
-    implementation "com.github.JodaOrg:joda-time:v2.10.6"
+    implementation "com.discord4j:discord4j-core:$discord4j_version"
+    implementation "com.github.Anuken.Arc:arc-core:$arc_version"
+    implementation "com.github.JodaOrg:joda-time:$joda_version"
+    implementation "com.github.ben-manes.caffeine:caffeine:$caffeine_version"
 
-    // data implements
-    implementation "javax.xml.bind:jaxb-api:$jaxbVersion"
-    implementation "org.hibernate:hibernate-core:$hibernateVersion"
-    implementation "postgresql:postgresql:$postgresqlVersion"
+    // data dependencies
+    implementation "javax.xml.bind:jaxb-api:$jaxb_version"
+    implementation "org.hibernate:hibernate-core:$hibernate_version"
+    runtimeOnly "org.postgresql:postgresql"
 
-    compileOnly "org.projectlombok:lombok:$lombokVersion"
-    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
+    // spring dependencies
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 }
-
-task dist(type: Jar){
-    from files(sourceSets.main.output.classesDirs)
-    from files(sourceSets.main.output.resourcesDir)
-    from (rootDir){ include "settings.properties" } // опционально
-    from {configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}}
-
-    archiveFileName = "${project.name}.jar"
-
-    manifest { attributes 'Main-Class': project.mainClassName }
-}
-
